--- a/simpleSlideLite.html
+++ b/simpleSlideLite.html
@@ -52,7 +52,7 @@
 	</head>
 <body>
 				<a href="http://github.com/Masquerade-Circus/simpleSlide.js" title="Fork me on Github" class="github" target="_blank"><img src="github.png" alt="Github" width="149" height="149"></a>
-				<h1 class="tc"><b>simpleSlide</b></h1>
+				<h1 class="tc"><b>simpleSlide Lite</b></h1>
 				<b class="description">
 					Small 318 bytes jQuery Plugin for create slides.
 					<br><a href="simpleSlideLite.html" title="simpleSlideLite">Lite</a> (438 bytes) and <a href="simpleSlideExt.html" title="simpleSlideExt">Extended</a> (830 bytes) version adds more options. 
